# file-manager

./: .prettierignore  .prettierrc  CHANGELOG.md  README.md  eslint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.ts  vitest.config.ts
.github/: dependabot.yml  dependency-review-config.yml
.github/workflows/: ci.yml  dependency-review.yml  release.yml
.husky/: pre-commit
assets/: icon.aseprite
scripts/: version.mjs
src/: app.css  app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  watcher.rs
src/lib/: constants.ts
src/lib/components/: ActionPanel.svelte  CleanView.svelte  EntriesTable.svelte  FilterPanel.svelte  OrganizerView.svelte  RenameView.svelte  UpdateChecker.svelte  ViewLayout.svelte  WatcherView.svelte
src/lib/states/: directory.svelte.ts  directory.test.svelte.ts  empty-folder-cleaner.svelte.ts  empty-folder-cleaner.test.svelte.ts  file.svelte.ts  folder.svelte.ts  folder.test.svelte.ts  organizer-filters.test.ts  organizer-filters.ts  organizer-rename.test.ts  organizer-rename.ts  organizer-types.ts  organizer.svelte.test.ts  organizer.svelte.ts  watcher.svelte.test.ts  watcher.svelte.ts  zoom.svelte.ts
src/lib/utils/: errors.ts  parse-list.test.ts  parse-list.ts
src/routes/: +page.svelte
