[package]
name = "file-manager"
version = "0.3.0"
description = "A Tauri App"
authors = ["yawn west"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "file_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"

[dependencies]
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["rt", "process", "fs", "time"] }
serde_json = "1"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
tauri-plugin-process = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
